codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__plugin_at_mentions_render_with_plugin_accent.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5635
expression: "format!(\"text:    {text}\\nmagenta: {magenta}\")"
---
text:    ▌ @sample plugin
magenta:   ^^^^^^^
