codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__plugin_mention_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5313
expression: terminal.backend()
---
"                                                                                                    "
"› Sample Plugin  [Plugin] Plugin that includes the Figma MCP server and Skills for common workflows "
"                                                                                                    "
"  enter insert · esc close                                                                          "
"▌                                                                                                   "
"▌ $sa                                                                                               "
"▌                                                                                                   "
"▌                                                                                                   "
"                                                                                 100% context left  "
