codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__shortcut_modified_space_is_not_rendered.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5313
expression: terminal.backend()
---
"▌                                                                                                   "
"▌ ab                                                                                                "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"                                                                                 100% context left  "
